--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependenciens
         working-directory: ./backend
-        run: npm install:all
+        run: npm run install:all
       - name: Run build
         run: npm run build:backend
       - name: Run backend
