--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,9 +15,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependenciens
         working-directory: ./backend
-        run: npm run install:all
+        run: npm install
       - name: Run build
-        run: npm run build:backend
+        run: npm run build
       - name: Run backend
-        run: npm run dev:backend
+        run: npm run dev
 
