feat(ci): run backend tests

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,4 +19,7 @@ jobs:
       - name: Run build
         working-directory: ./backend
         run: npm run build
+      - name: Run tests
+        working-directory: ./backend
+        run: npm run test
 
