--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -22,4 +22,6 @@ jobs:
         run: npm run build
       - name: Run tests
         run: npm run test
+      - name: Run lint
+        run: npm run lint
 
