--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   backend:
-    name: Backend Build & Test
+    name: Backend Lint & Test
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -24,4 +24,15 @@ jobs:
         run: npm run test
       - name: Run lint
         run: npm run lint
+
+  frontend:
+    name: Frontend Lint & Test
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+      - name: Install dependencies
+        run: npm install
+
 
