--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -32,6 +32,7 @@ jobs:
       run:
         working-directory: ./frontend
     steps:
+      - uses: actions/checkout@v4
       - name: Install dependencies
         run: npm install
 
