--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -35,5 +35,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: npm install
+      - name: Run frontend tests
+        run: npm run test
+      - name: Run frontend lint
+        run: npm run lint
 
 
