fix(codeql): remove defective quotes

--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -2,9 +2,9 @@ name: CodeQL
 
 on:
   push:
-    - "main"
+    - main
   pull_request:
-    - "main"
+    - main
   schedule:
     - cron: '20 18 * * 5'
 
