--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -2,9 +2,11 @@ name: CodeQL
 
 on:
   push:
-    - main
+    branches:
+      - main
   pull_request:
-    - main
+    branches:
+      - main
   schedule:
     - cron: '20 18 * * 5'
 
