fix(codeql): separate typescript and javascript languages in CodeQL

--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -26,7 +26,9 @@ jobs:
         include:
           - language: actions
             build-mode: none
-          - language: javascpirt-typescript
+          - language: javascpirt
+            build-mode: none
+          - language: typescript
             build-mode: none
 
     steps:
