--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,9 +7,18 @@ COPY package*.json .
 COPY tsconfig*.json .
 RUN npm install
 
-COPY . .
+COPY src ./src
 
 RUN npm run build
+
+FROM node:24-alpine
+
+WORKDIR /app
+
+ENV NODE_ENV=production
+
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/node_modules ./node_modules
 
 EXPOSE 5000
 
