--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,16 +1,42 @@
 name: Deployment to Render
 
 on:
-  release:
-    types: [published]
+  push:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      # Login to Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./backend
+          push: true
+          tags: user/app:latest
+
+      # Deploy Frontend
       - name: Deploy Frontend
         if: startsWith(github.ref, 'refs/tags/')
         env:
           frontend_url: ${{ secrets.RENDER_DEPLOY_FRONTEND_HOOK_URL }}
-        run: |
-          curl "$frontend_url"
+        run: curl "$frontend_url"
+
+      # Deploy Backend
+      - name: Deploy Backend
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          backend_url: ${{ secrets.RENDER_DEPLOY_BACKEND_HOOK_URL }}
+        run: curl "$backend_url"
