--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: user/app:latest
+          tags: aavetatu/task-manage:backend
 
       # Deploy Frontend
       - name: Deploy Frontend
